--- a/Web.Statu/App_Code/Util.cshtml
+++ b/Web.Statu/App_Code/Util.cshtml
@@ -95,6 +95,15 @@
 @Html.Raw(s);
 }
 
+@helper SetAutofocusOnId(string id)
+{
+    <script>
+        window.onload = function() {
+        var input = document.getElementById("@id").focus();
+        }
+    </script>
+}
+
 @helper AddVisitImg(string path)
 {
     string base64 = Convert.ToBase64String(System.Text.Encoding.UTF8.GetBytes(path));
