--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -36,6 +36,8 @@
         })(document);
         smartlook('init', '344e291cbee0b3c87748a78b80faf81d6e8628b1');
     </script>
+
+    @Util.SetAutofocusOnId("Q");
 }
 
 @section title
