--- a/Web.Statu/Views/Home/OsobaProfil.cshtml
+++ b/Web.Statu/Views/Home/OsobaProfil.cshtml
@@ -150,7 +150,7 @@
             <td>
                 <h4 style="padding-top: 0;margin-top: 0;">Hledání informací s vazbou na @Model.FullName()</h4>
                 <p>
-                    Pokud napíšete do hledání text <code>osobaId:{Model.NameId}</code>,
+                    Pokud napíšete do hledání text <code>osobaId:@(Model.NameId)</code>,
                     zobrazí se smlouvy, veřejné zakázky, dary a další informace, které mají vazbu na @Model.FullName()
                     nebo firmy touto osobou přímo či nepřímo vlastněnou či řízenou.
                 </p>
